<resources>
    <string name="app_name">STOP</string>
    <string name="nav_medication">Medication</string>
    <string name="nav_game">Game</string>
    <string name="main_experiment">Experiment</string>
    <string name="main_demo">Demo</string>
    <string name="main_demo_mode">Demo mode</string>
    <string name="main_demo_details">You are using STOP in demo mode: all the application functionalities are available but no data is collected and shared with the research study. You can join the study and contribute to the research</string>
    <string name="main_quit_details">You will unenroll from the study: the application will stop sharing your data and all the already collected data will be deleted from the server. You can keep using the application will all the available functionalities in demo mode</string>
    <string name="main_participant_info">Participant info</string>
    <string name="main_join_study">Join study</string>
    <string name="main_quit_study">Quit study</string>
    <string name="main_quit_done">You have quit the study. The application will no longer collect your data</string>
    <string name="main_daily_survey">Daily survey</string>
    <string name="provider_game_label">STOP App data</string>
    <string name="submit">Submit</string>
    <string name="confirm">Confirm</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="specify_with_voice">Specify with voice</string>
    <string name="voice_when_taken">When have you taken medication last time?</string>
    <string name="voice_what_think">What do you think about STOP?</string>
    <string name="game_press_button_to_play">Press button to play</string>
    <string name="game_start">Start</string>
    <string name="game_get_ready">Get ready</string>
    <string name="game_play">Play</string>
    <string name="game_done_1">Done! Play again?\nScore:\u0020</string>
    <string name="game_done_2">, last score:\u0020</string>
    <string name="game_done_3">\nNow record your medications</string>
    <string name="game_again">Play again</string>
    <string name="game_go_journal">Go to medication journal</string>
    <string name="game_invalid_settings">None of the game settings can be 0. Please update first</string>
    <string name="game_collection_error">Data collection error. Please restart the application</string>
    <string name="medication_list_heading">List of medication records</string>
    <string name="medication_no_record">No records have been made yet</string>
    <string name="medication_when_last_time">When have you taken medication last time?</string>
    <string name="medication_specify">Specify time</string>
    <string name="medication_now">Now</string>
    <string name="medication_item_number_sample">1)</string>
    <string name="medication_item_timestamp_sample">12:00, 21 December 2018</string>
    <string name="medication_check_title">Check medication time</string>
    <string name="medication_check_date">Check date</string>
    <string name="medication_check_time">Check time</string>
    <string name="medication_specify_date">Medication date</string>
    <string name="medication_specify_time">Medication time</string>
    <string name="medication_modify_title">Modify medication record</string>
    <string name="medication_edit_time">Edit time</string>
    <string name="medication_edit_date">Edit date</string>
    <string name="medication_edited">Medication edited</string>
    <string name="medication_deleted">Medication deleted</string>
    <string name="medication_error">Error: </string>
    <string name="medication_no_internet">Internet connection is disabled. Please enable it or use \"Specify time\" option </string>
    <string name="medication_cannot_recognize">Cannot recognize date, please try again</string>
    <string name="medication_recorded">Medication recorded</string>
    <string name="medication_future">You cannot input records for future, please try again</string>
    <string name="medication_parser_dialog">Please wait…</string>
    <string name="feedback">Feedback</string>
    <string name="feedback_device_name">Device name</string>
    <string name="feedback_device_id">Device ID</string>
    <string name="feedback_clear">Clear</string>
    <string name="feedback_saved">Feedback saved. Thank you!</string>
    <string name="feedback_enter">Please enter your feedback</string>
    <string name="health_question">Overall, how were your Parkinson\'s disease symptoms yesterday?</string>
    <string name="health_survey_saved">Survey recorded. Thank you!</string>
    <string name="health_empty_response">Please select PD level</string>
    <string name="survey_response_zero">No symptoms, excellent day</string>
    <string name="survey_response_one">Minimal symptoms with no concrete interference with my daily activities</string>
    <string name="survey_response_two">Mild symptoms that slightly interfered with my daily activities</string>
    <string name="survey_response_three">Moderate symptoms but they did not stop me from carrying out my daily activities</string>
    <string name="survey_response_four">Severe symptoms that prevented me from carrying out one or more of my daily activities</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_ball_game">Ball game</string>
    <string name="pref_header_medication">Medication</string>
    <string name="key_ball_size_title">Ball size</string>
    <string name="key_ball_size">key_ball_size</string>
    <string name="key_ball_size_value">150</string>
    <string name="key_sensitivity_title">Sensitivity</string>
    <string name="key_sensitivity">key_sensitivity</string>
    <string name="key_sensitivity_value">3</string>
    <string name="key_game_time_title">Game time</string>
    <string name="key_game_time">key_game_time</string>
    <string name="key_game_time_value">10</string>
    <string name="key_game_reset_default_title">Reset to default settings</string>
    <string name="key_game_reset_default">key_game_reset_default</string>
    <string name="key_medication_title">Clear medication list</string>
    <string name="key_medication">key_medication</string>
    <string name="settings_are_you_sure">Are you sure?</string>
    <string name="settings_delete_warning">This will delete all recorded medications</string>
    <string name="settings_list_cleared">Medication list cleared</string>
    <string name="settings_default_applied">Default setting were applied</string>
    <string name="consent_username">Your username</string>
    <string name="consent_age">Your age</string>
    <string name="consent_do_you_have_pd">Do you have a diagnosis of Parkinson\'s disease (PD)?</string>
    <string name="consent_yes">Yes</string>
    <string name="consent_no">No</string>
    <string name="consent_when_was_pd_diagnosed">PD was diagnosed</string>
    <string name="consent_define_your_symptoms">Define your symptoms:</string>
    <string name="consent_define_medications_you_take">Define the medications you take:</string>
    <string name="consent_app_consent">Research consent</string>
    <string name="consent_accept">Accept</string>
    <string name="consent_decline">Decline</string>
    <string name="consent_empty_entries">Please insert data to empty entries and rate all the symptoms</string>
    <string name="consent_specify_age">Please select a username and specify your age</string>
    <string name="consent_declining">By declining the Research Consent, you may still use the application with all its functionalities. No data will be collected or shared with our study. Do you wish to proceed?</string>
    <string name="consent_loading">Thank you for joining our study! Loading resources…</string>
    <string name="consent_app_consent_details">The University of Oulu (Finland) and the University of Manchester (UK) are using this application to better understand Parkinson’s medication adherence and effectiveness via gamification and medication logs. By installing and agreeing to this consent, you effectively become a participant to our joint research effort. If you disagree, you may still use the application without any data sharing.\n\n<b>Data Collection</b>\n- Your answers to the initial Parkinson’s patient profile questions\n- Accelerometer, gyroscope, orientation data from the phone ONLY during game sessions of our STOP game\n- Your medication taking times\n- Application stability data collected via Google Analytics (crashes)\n\n<b>Security and Privacy</b>\nHIPAA and GDPR compliant: the encrypted data is securely sent to our server in Oulu for further analysis on a regular basis over WiFi. No personal identifiers are collected. Personalisable name for a randomly assigned UUID. If withdrawn from data collection, the server data is erased.</string>
    <string name="consent_add_medication">Add a medication</string>
    <string name="consent_button_add">Add</string>
    <string name="consent_fill_entries">Please fill all the entries (comments are optional)</string>
    <string name="consent_no_medications_were_defined_yet">No medications were defined yet</string>
    <string name="consent_medication_name">Medication name</string>
    <string name="consent_times_per_day">Times per day</string>
    <string name="consent_pills_each_time">Pills each time</string>
    <string name="consent_how_often_every">How often: every</string>
    <string name="consent_the_first_one_i_have_is_at">The first one I have is at</string>
    <string name="consent_comments">Comments</string>
    <string name="consent_welcome">STOP is designed for Parkinson\'s patients for tracking motor abilities and increasing medication adherence.\n\nThe motor functionalities are estimated with a ball game. The goal of the game is to keep the red ball motionless in the center of the inner black circle by balancing the device horizontally on the palm of the hand. The game success is evaluated using 0 (min) - 100 (max) scale. In addition the user is asked to record the medication taking time to the journal. The research will use the collected information for searching correlation between motor functionalities and medication effectiveness.\n\nSTOP application sends notifications about the game and medication recording four times per day. Once per day user is asked to evaluate the level of symptoms.</string>
    <string name="consent_welcome_title">Welcome to STOP</string>
    <string name="consent_welcome_gotit">Got it</string>
    <string name="notification_game_morning">Morning</string>
    <string name="notification_game_noon">Noon</string>
    <string name="notification_game_afternoon">Afternoon</string>
    <string name="notification_game_evening">Evening</string>
    <string name="notification_game_text">: play a game and record medication</string>
    <string name="notification_survey">Daily survey</string>
    <string name="notification_survey_text">: how was yesterday?</string>
    <string name="main_sync_data">Sync data</string>
    <string name="manual_dialog_title">Warning</string>
    <string name="manual_dialog_message">This is an experimental function designed ONLY for STOP participants located in Finland. Please do not use it if you are not a part of research study.</string>
    <string name="manual_dialog_positive">Continue</string>
    <string name="manual_dialog_negative">Cancel</string>
    <string name="manual_dialog_syncing">Data syncing</string>
    <string name="manual_dialog_please_wait">Please wait…</string>
    <string name="manual_dialog_sync_done">Data synced successfully. Thank you for participation!</string>
    <string name="manual_dialog_sync_error">Sync error. Please try again.</string>
    <string name="foreground_notification_title">STOP</string>
    <string name="foreground_notification_text">Medication tracking is active</string>
</resources>