<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/main_demo"
        android:orderInCategory="1"
        android:title="@string/main_demo"
        app:showAsAction="always" />

    <item
        android:id="@+id/main_health"
        android:orderInCategory="2"
        android:icon="@drawable/ic_survey"
        android:title="@string/main_daily_survey"
        app:showAsAction="always" />

    <item
        android:id="@+id/main_settings"
        android:orderInCategory="3"
        android:icon="@drawable/ic_settings_light"
        android:title="@string/main_experiment"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/main_feedback"
        android:orderInCategory="4"
        android:icon="@drawable/ic_feedback_light"
        android:title="@string/main_participant_info"
        app:showAsAction="never" />

    <item
        android:id="@+id/main_join_study"
        android:orderInCategory="5"
        android:title="@string/main_join_study"
        app:showAsAction="never" />

    <item
        android:id="@+id/main_quit_study"
        android:orderInCategory="6"
        android:title="@string/main_quit_study"
        app:showAsAction="never" />

</menu>