<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.aware.app.stop.GameFragment">

    <TextView
        android:id="@+id/timer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:text="@string/game_press_button_to_play"
        android:textAlignment="center"/>

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </FrameLayout>

    <ImageButton
        android:id="@+id/playBtn"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerInParent="true"
        android:adjustViewBounds="true"
        android:background="?android:attr/selectableItemBackground"
        android:padding="10dp"
        android:scaleType="fitCenter"
        android:contentDescription="@string/game_play"
        app:srcCompat="@drawable/ic_play_circle"/>

    <Button
        android:id="@+id/playAgain"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_centerInParent="true"
        android:background="@drawable/button_style"
        android:text="@string/game_again"
        android:visibility="invisible"
        android:enabled="false"/>

    <Button
        android:id="@+id/openMedications"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_below="@+id/playAgain"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_style"
        android:text="@string/game_go_journal"
        android:visibility="invisible"
        android:enabled="false"/>

</RelativeLayout>
