<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ConsentActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp">

        <LinearLayout
            android:id="@+id/consentGeneral"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="5dp">

            <LinearLayout
                android:id="@+id/layoutPD"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="3dp">

                <TextView
                    android:id="@+id/consentPD"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:text="@string/consent_do_you_have_pd"
                    android:focusable="true"
                    android:focusableInTouchMode="true"/>

                <CheckBox
                    android:id="@+id/checkboxPD"
                    android:layout_width="70dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="10dp"
                    android:checked="true"
                    android:text="@string/consent_yes"/>

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/etUsernameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/consent_username"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/etAgeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etUsernameLayout">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etAge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="2"
                    android:hint="@string/consent_age"/>

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/detailsPD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:id="@+id/etWhenLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/etWhenTextLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/etWhen"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:maxLength="2"
                        android:hint="@string/consent_when_was_pd_diagnosed"/>

                </android.support.design.widget.TextInputLayout>

                <Spinner
                    android:id="@+id/spinnerWhen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:entries="@array/spinnerWhenItems"/>

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/etMedicationLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etWhenLayout">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etMedication"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/consent_define_medications_you_take"/>

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/consentSymptoms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etMedicationLayout"
                android:layout_marginTop="10dp"
                android:layout_marginStart="3dp"
                android:gravity="center_vertical"
                android:text="@string/consent_define_your_symptoms" />

            <com.aware.app.stop.NonScrollListView
                android:id="@+id/symptomsList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/consentSymptoms"
                android:layout_marginTop="5dp">
            </com.aware.app.stop.NonScrollListView>

        </RelativeLayout>

        <Button
            android:id="@+id/consentSubmit"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/button_style"
            android:text="@string/submit"/>

    </LinearLayout>

</ScrollView>